store configuration file was added&

--- a/Tehcon.xcodeproj/xcshareddata/xcschemes/Tehcon.xcscheme
+++ b/Tehcon.xcodeproj/xcshareddata/xcschemes/Tehcon.xcscheme
@@ -51,6 +51,9 @@
             ReferencedContainer = "container:Tehcon.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../Tehcon/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
